[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ifex"
version = "1.5"
description = "Interface Exchange Framework (IFEX) tools"
authors = [
    {name = "COVESA", email = ""},
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "Jinja2==3.1.3",
    "MarkupSafe==2.1.1",
    "PyYAML>=6.0",
    "attrs==23.2.0",
    "dacite==1.6.0",
    "jsonschema>=4.20",
    "lark==1.1.9",
    "lxml>=5.0.0",
    "oyaml==1.0",
    "ply>=3.11",
    "inflection>=0.5.1",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.4",
    "tox>=4",
]

[project.scripts]
ifexgen = "ifex_packaging.entrypoints.generator:ifex_generator_run"
ifexgen_dbus = "ifex_packaging.entrypoints.generator_dbus:ifex_dbus_generator_run"
ifexconv_protobuf = "ifex_packaging.entrypoints.protobuf_ifex:protobuf_to_ifex_run"

[project.urls]
Homepage = "https://github.com/COVESA/ifex"
Documentation = "https://covesa.github.io/ifex"
Repository = "https://github.com/COVESA/ifex"
Issues = "https://github.com/COVESA/ifex/issues"

[tool.hatch.build.targets.wheel]
packages = [
    "ifex",
    "ifex_packaging"
]

[tool.hatch.build.targets.sdist]
include = [
    "/ifex",
    "/ifex_packaging",
]
